manifests/yornik/middleware-csp.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: csp
  namespace: yornik
spec:
  headers:
    customResponseHeaders:
      Content-Security-Policy: "default-src 'self'; base-uri 'self'; frame-ancestors 'none'; form-action 'self'; object-src 'none'; script-src 'self'; style-src 'self'; img-src 'self' data:; font-src 'self' data:; connect-src 'self'; upgrade-insecure-requests"
