manifests/yornik/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yornik
  namespace: yornik
  labels:
    app: yornik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yornik
  template:
    metadata:
      labels:
        app: yornik
    spec:
      containers:
        - name: nginx
          image: nginx:1.29-alpine
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/
              readOnly: true
          resources:
            requests:
              cpu: 5m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi
      volumes:
        - name: html
          configMap:
            name: yornik-html
