manifests/yornik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yornik
  namespace: yornik
  labels:
    app: yornik
  annotations:
    external-dns.kubernetes.io/hostname: www.yornik.eu
    external-dns.kubernetes.io/target: jump.fedishark.eu
    external-dns.kubernetes.io/ttl: "3600"
spec:
  selector:
    app: yornik
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
