manifests/yornik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: yornik
  namespace: yornik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`yornik.eu`) || Host(`www.yornik.eu`)
      kind: Rule
      middlewares:
        - name: redirect-www-to-apex
          namespace: yornik
        - name: csp
          namespace: yornik
        - name: security-headers
          namespace: traefik
        - name: rate-limit
          namespace: traefik
      services:
        - name: yornik
          port: 80
  tls:
    certResolver: letsencrypt
